【概要】otp送信を実装 【関連処理】

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,14 @@
+validation.password=パスワード
+
+
+message.otp=こんにちは %s 様<br><br>セキュリティ強化のために、ログインにはワンタイムパスワード（OTP）が必要です。<br><br>以下のOTPをログイン画面に入力してください。<br>  <br>ワンタイムパスワード（OTP）：[%s]<br><br>このパスワードは10分間有効です。それ以降は再度ログインを試みて新しいOTPを取得してください。<br><br>もしこのメールに心当たりがない場合は、ただちにサポートまでご連絡ください。<br><br>安全なサービスのご利用をお願いいたします。<br><br>よろしくお願いいたします。
+
+
 validation.username.required=ユーザー名は必須です。
 validation.username.size=ユーザー名は{min}文字以上{max}文字以下でなければなりません。
 validation.password.required=パスワードは必須です。
 validation.password.size=パスワードは{min}文字以上{max}文字以下でなければなりません。
+
 
 error.exception.resourcenotfound=リソースが見つかりません。
 error.exception.unauthorized=認証に失敗しました。
